fix animated visual on safari

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -16,8 +16,9 @@ nav > a {
     align-items: center;
     position: relative;
     overflow: hidden;
-    animation: sky-light-up 3s ease-out 0.5s;
-    animation-fill-mode: both;
+    background-color: #253551;
+    /*animation: sky-light-up 3s ease-out 0.5s;*/
+    /*animation-fill-mode: both;*/
 }
 
 @keyframes appear {
@@ -68,33 +69,16 @@ nav {
     animation-fill-mode: both;
 }
 
-.spacer {
-    position: absolute;
-    bottom: 0;
-    z-index: 9;
-    aspect-ratio: 960/100;
-    width: 100%;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    background-image: url("../assets/wave.svg");
-}
 
-.spacer-bottom {
-    aspect-ratio: 960/50;
-    width: 100%;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    background-image: url("../assets/wave2.svg");
-    border: 0;
+.spacer-bottom-wrapper {
+    width: 110%;
+    left: -5%;
 }
-
 
 .wave-wrapper {
     position: absolute;
     bottom: 0;
-    left: -10px;
+    left: -5%;
     z-index: 9;
     width: 110%;
     object-fit: cover;
